# VaraNetworkExample

./: .gitignore  README.md
backend/: amber_msgs.meta.txt  app.js  package.json
contract-string/amber-msgs/: Cargo.toml  build.rs
contract-string/amber-msgs/metaio/: Cargo.toml
contract-string/amber-msgs/metaio/src/: lib.rs
contract-string/amber-msgs/src/: lib.rs
contract-vec/amber-msgs/metaio/src/: lib.rs
contract-vec/amber-msgs/src/: lib.rs
contracts/: Cargo.toml
contracts/amber-msgs/: .binpath
contracts/amber-msgs/metaio/src/: lib.rs
contracts/amber-msgs/src/: lib.rs
